cns/3.14/admin_guide/start/enforcer/reqs.adoc
== System requirements

//'''
//
//title: System requirements
//type: single
//url: "/3.14/start/enforcer/reqs/"
//weight: 10
//menu:
//  3.14:
//    parent: "enforcer"
//    identifier: "enforcer-reqs"
//canonical: https://docs.aporeto.com/saas/start/enforcer/reqs/
//
//'''

=== Orchestrators

* Kubernetes 1.11 or later
* OpenShift 3.11 or later

=== Linux

==== Validated distributions

|===
|Distribution |Versions

|Amazon Linux               |AMI, 2
|CentOS^1^                   |7.0^2^, 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.8, 7.9
|Debian                     |9
|Oracle Enterprise Linux*  |7.0, 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.8, 7.9
|Red Hat Enterprise Linux* |6.7^3^, 6.8, 7.0, 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.8, 7.9
|Ubuntu                     |14.04, 16.04, 18.04
|===

^1^You must disable `firewalld`.

^2^ See xref:../../release-notes/3.14.8.adoc#_known-issues[known issue CNS-614].

^3^ Before installing the enforcer, install https://fedoraproject.org/wiki/EPEL[Extra Packages for Enterprise Linux (EPEL)] and execute `yum update`.

==== Kernel capabilities

* `CAP_SYS_PTRACE`: to access the `/proc` file system. Example: `/proc/<pid>/root`
* `CAP_NET_ADMIN`: to program `iptables`.
* `CAP_NET_RAW`: the enforcer uses raw sockets for the UDP datapath and in diagnostic ping implementations
* `CAP_SYS_RESOURCE`: to set and override resource limits (`setrlimit syscall`)
* `CAP_SYS_ADMIN`: to call, mount, and load extended Berkeley Packet Filter (eBPF)
* `CAP_SYS_MODULE`: to ensure kernel modules are loaded like ip_tables, iptable_mangle, etc. (see list above). No proprietary kernel module is loaded.

[#_kernel-modules]
==== Kernel modules

* `net/netfilter/xt_cgroup.ko`: module to match the process control group.
* `net/netfilter/xt_limit.ko`: rate-limit match
* `net/netfilter/xt_multiport.ko`: multiple port matching for TCP, UDP, UDP-Lite, SCTP and DCCP
* `net/netfilter/xt_connmark.ko`: connection mark operations
* `net/netfilter/xt_REDIRECT.ko`: connection redirection to localhost
* `net/netfilter/xt_string.ko`: string-based matching
* `net/netfilter/xt_HMARK.ko`: packet marking using hash calculation
* `net/netfilter/xt_LOG.ko`: IPv4/IPv6 packet logging
* `net/netfilter/xt_bpf.ko`: BPF filter match
* `net/netfilter/xt_state.ko`: `ip[6]_tables` connection tracking state match module
* `net/netfilter/xt_set.ko`: IP set match and target module
* `net/netfilter/nf_nat_redirect.ko`: used by `xt_REDIRECT`
* `net/netfilter/nf_log_common.ko`: used by `nf_log_ipv4`
* `net/ipv6/netfilter/nf_conntrack_ipv6.ko`: Linux connection tracking table
* `net/ipv4/netfilter/nf_log_ipv4.ko`: Netfilter IPv4 packet logging
* `net/netfilter/ipset/ip_set.ko`: core IP set support, used by `ip_set_bitmap_port`,`xt_set`,`ip_set_hash_net`,`ip_set_hash_netport`
* `net/netfilter/ipset/ip_set_bitmap_port.ko`: Ipset: bitmap:port
* `net/netfilter/ipset/ip_set_hash_netport.ko`: Ipset: hash:net,port
* `net/netfilter/ipset/ip_set_hash_net.ko`: Ipset: hash:net
* `lib/ts_bm.ko`: Boyer-Moore string matching algorithm
* `net/sched/cls_cgroup.ko`: Control Group Classifier
* `ip_tables.ko`: iptables
* `iptable_nat.ko`: iptables NAT table support
* `iptable_mangle.ko`: iptables mangle table support

==== Other dependencies

* `elfutils-libelf`
* `conntrack-tools`
* `ipset`

=== Windows

* Windows Server 2019
* Windows Server 2016

=== Standalone container

Aporeto distributes the enforcer as a standalone container to support alternative orchestrators such as Amazon Elastic Container Service (ECS) and installation on container-optimized hosts with read-only file systems such as CoreOS.

Installing the enforcer as a standalone container requires:

* Docker 18.02 or later
* Docker https://docs.docker.com/engine/reference/commandline/dockerd/#daemon-configuration-file[userland proxy disabled: `"userland-proxy": false`]
* https://conntrack-tools.netfilter.org/manual.html[Netfilter `conntrack`]
+
|===
|Linux kernel version |conntrack version

|4.19 and later
|`nf_conntrack`

|4.18 and earlier
|`nf_conntrack_ipv4` and `nf_conntrack_ipv6`
|===
